project_axis_stream/project_axis_stream.sdk/.metadata/.plugins/org.eclipse.cdt.ui/testAxi2.build.log
13:36:13 **** Incremental Build of configuration Debug for project testAxi2 ****
make all 
Building file: ../src/helloworld.c
Invoking: ARM gcc compiler
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -I../../testAxi2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.d" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:40:6: error: conflicting types for 'print'
 void print(char *str);
      ^
In file included from ../../testAxi2_bsp/ps7_cortexa9_0/include/xil_io.h:74:0,
                 from ../../testAxi2_bsp/ps7_cortexa9_0/include/xdogain.h:20,
                 from ../src/helloworld.c:37:
../../testAxi2_bsp/ps7_cortexa9_0/include/xil_printf.h:39:6: note: previous declaration of 'print' was here
 void print( const char *ptr);
      ^
make: *** [src/helloworld.o] Error 1

13:36:49 Build Finished (took 35s.689ms)

